fixed search alignment on ipad

--- a/css/style.css
+++ b/css/style.css
@@ -1174,6 +1174,7 @@ ul.twocolorderonline {
 
     #headersearch .tabletview {
         display: block;
+        margin-top: 30px;
     }
 
 
